ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ms1.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ms1-frontend
                port:
                  number: 80
    - host: ms2.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ms2-frontend
                port:
                  number: 80
